Iframe, listas, tabelas e CSS

--- a/index.html
+++ b/index.html
@@ -1,26 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Front-End Impacta</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <style>
+        #home {
+            color: brown;
+        }
+    </style> -->
 </head>
+
 <body>
     <header>
-       <a href="services/service.html">Services</a>
-        <!--O Header é uma tag de seção e esse comentário não é visível em tela-->
+
+        <div>
+            <a href=""><img src="images/Logo.svg" alt=""></a>
+        </div>
+
+        <div>
+            <nav>
+
+                <ul> <!--Lista não ordena-->
+                    <li><a href="#" id="home">Home</a></li>
+                    <li><a href="#" class="link">About us</a></li>
+                    <li><a href="#" class="service">Service</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+
+            </nav>
+
+        </div>
+
+        <div>
+
+            <a href="#"><button class="link">Get a quote</button></a>
+
+        </div>
+
+
+        <!-- <a href="services/service.html">Services</a> -->
     </header>
     <main>
-        Main
-    </main>
-    <section>
-        Section/servicos
-    </section>
-    <!-- <section>
+
+        <section>
+
+        </section>
+        <!-- <section>
         comentário
     </section> -->
-    <footer>
-        Footer
-    </footer>
+        <footer>
+
+        </footer>
 </body>
+
 </html>
