ajustando formatacao do menu e botão

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
                 
                 <!-- Filho 3 -->
                 <div class="get-a-quote">
-                    <a href="#"><button class="btn-green">GET A QUOTE</button></a>
+                    <a href="#">
+                        <button class="btn-green">GET A QUOTE</button>
+                    </a>
                 </div>
 
                 </div>
