criando classe para btn transparente

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                     <div class="main-buttons">
                         <a href="" class="btn-green">Get Start Now</a>
-                        <a href="" class="">View all Services</a>
+                        <a href="" class="btn-opc">View all Services</a>
                     </div>
                 </div>
 
