ajustando texto dos cards

--- a/index.html
+++ b/index.html
@@ -74,28 +74,28 @@
     <section>
         <div class="card-section">
 
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="images/card1.svg"  alt="">   
                 <div class="card-body">
-                    <h5 class="card-title">Teste</h5>
-                    <p class="card-text">Lorem, ipsum dolor.</p>
-                    <a href="#" class="btn-opc">Lorem, ipsum.</a>
+                    <h5 class="card-title">Office Cleaning</h5>
+                    <p class="card-text">While we can customize your cleaning plan to suit your needs, most clients schedule regular cleaning services:</p>
+                    <a href="#" class="btn-opc">Book Now</a>
                 </div>
             </div>
-             <div class="card" style="width: 18rem;">
+             <div class="card">
                 <img src="images/card2.svg"  alt="">   
                 <div class="card-body">
-                    <h5 class="card-title">Teste</h5>
-                    <p class="card-text">Lorem, ipsum dolor.</p>
-                    <a href="#" class="btn-green">Lorem, ipsum.</a>
+                    <h5 class="card-title">Spring Cleaning</h5>
+                    <p class="card-text">While we can customize your cleaning plan to suit your needs, most clients schedule regular cleaning services:</p>
+                    <a href="#" class="btn-green">Book Now</a>
                 </div>
             </div>
-             <div class="card" style="width: 18rem;">
+             <div class="card">
                 <img src="images/cad3.svg"  alt="">   
                 <div class="card-body">
-                    <h5 class="card-title">Teste</h5>
-                    <p class="card-text">Lorem, ipsum dolor.</p>
-                    <a href="#" class="btn-opc">Lorem, ipsum.</a>
+                    <h5 class="card-title">House Cleaning</h5>
+                    <p class="card-text">While we can customize your cleaning plan to suit your needs, most clients schedule regular cleaning services:</p>
+                    <a href="#" class="btn-opc">Book Now</a>
                 </div>
             </div>
         </div>
